# guile-irc

./: .gitignore  .gitmodules  AUTHORS  IDEAS  INSTALL  Makefile  Makefile.am  README.md  autogen.sh  channel.scm  configure.ac  error-code.scm  error.scm  guile.am  handlers.scm  index.html  irc.scm  message.scm  tagged-hook.scm
doc/: Makefile.am  api.texi  irc-dump.txt
irc/: channel.scm  config.scm.in  error-code.scm  error.scm  gnutls.scm  handlers.scm  irc.scm  message.scm  network.scm  tagged-hook.scm
test/: cert.pem  localhost-hello.scm  message-test.scm  socat-listen.sh  test-connect.scm
